# elkcat

./: Args.hs  Config.hs  Format.hs  JSON.hs  Placeholder.hs  Query.hs  README.md  Time.hsc  elkcat.cabal  elkcat.hs  elkcat.yaml  stack.yaml
gnulib-parse-datetime/: .gitignore  config.h.in  configure.ac
gnulib-parse-datetime/glm4/: Makefile.am
gnulib-parse-datetime2/: .gitignore  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
gnulib-parse-datetime2/gllib/: Makefile.am  Makefile.in
gnulib-parse-datetime2/glm4/: Makefile.in
