## Process this file with automake to produce Makefile.in.

EXTRA_DIST =
EXTRA_DIST += 00gnulib.m4
EXTRA_DIST += __inline.m4
EXTRA_DIST += absolute-header.m4
EXTRA_DIST += alloca.m4
EXTRA_DIST += assert_h.m4
EXTRA_DIST += bison.m4
EXTRA_DIST += c-bool.m4
EXTRA_DIST += clock_time.m4
EXTRA_DIST += eealloc.m4
EXTRA_DIST += environ.m4
EXTRA_DIST += errno_h.m4
EXTRA_DIST += extensions.m4
EXTRA_DIST += extern-inline.m4
EXTRA_DIST += flexmember.m4
EXTRA_DIST += gettime.m4
EXTRA_DIST += gettimeofday.m4
EXTRA_DIST += gnulib-common.m4
EXTRA_DIST += include_next.m4
EXTRA_DIST += inttypes.m4
EXTRA_DIST += limits-h.m4
EXTRA_DIST += malloca.m4
EXTRA_DIST += mktime.m4
EXTRA_DIST += multiarch.m4
EXTRA_DIST += nstrftime.m4
EXTRA_DIST += off_t.m4
EXTRA_DIST += parse-datetime.m4
EXTRA_DIST += pid_t.m4
EXTRA_DIST += setenv.m4
EXTRA_DIST += ssize_t.m4
EXTRA_DIST += std-gnu11.m4
EXTRA_DIST += stddef_h.m4
EXTRA_DIST += stdint.m4
EXTRA_DIST += stdlib_h.m4
EXTRA_DIST += sys_socket_h.m4
EXTRA_DIST += sys_time_h.m4
EXTRA_DIST += sys_types_h.m4
EXTRA_DIST += time_h.m4
EXTRA_DIST += time_r.m4
EXTRA_DIST += time_rz.m4
EXTRA_DIST += timegm.m4
EXTRA_DIST += timespec.m4
EXTRA_DIST += tm_gmtoff.m4
EXTRA_DIST += tzset.m4
EXTRA_DIST += unistd_h.m4
EXTRA_DIST += vararrays.m4
EXTRA_DIST += warn-on-use.m4
EXTRA_DIST += wchar_t.m4
EXTRA_DIST += wint_t.m4
EXTRA_DIST += zzgnulib.m4
